[gd_scene format=3 uid="uid://bpomcsy0jasud"]

[ext_resource type="Script" uid="uid://e3mpkmfmelmi" path="res://Prefab/Merchant/merchant_ui.gd" id="1_ka8qh"]

[node name="MerchantUI" type="Control" unique_id=2094034110]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ka8qh")

[node name="Panel" type="Panel" parent="." unique_id=830073859]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Mask" type="Label" parent="Panel" unique_id=931439981]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.5
offset_right = 20.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Mask"

[node name="MaskList" type="HBoxContainer" parent="Panel" unique_id=682553623]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -61.0
offset_right = 20.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2

[node name="Potion" type="Label" parent="Panel" unique_id=166921041]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -11.5
offset_right = 25.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Potion"

[node name="PotionList" type="HBoxContainer" parent="Panel" unique_id=711028003]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = 37.0
offset_right = 23.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="Button" parent="Panel" unique_id=1342842057]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Close"
